ASUSFETest/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <picklist>
            <picklistValues>
                <fullName>GRAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRGC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRNH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRNU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWLW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Term__c</fullName>
        <label>Enrollment Term</label>
        <picklist>
            <picklistValues>
                <fullName>2012 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Fall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <label>Plan Code</label>
        <picklist>
            <picklistValues>
                <fullName>AGAGRIBMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARARCMARCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARBDKCMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARBLTENVMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARDESAMMSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARDESIGMSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARDSCIMSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARDSCNMSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARENERGYMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARENHHEPHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARENVDEPHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARFACILMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARHHEMSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARINDDEMSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARINTDEMSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARLDEMLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMUDMUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARPUPPHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARREMREDEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARURBMUEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARVCDMSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAEPMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCOMSTMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASETHCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASFAMCGERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASGRNONDGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASINTERMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASJHRMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASOHCGERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPGSMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Source_Subtype__c</fullName>
        <label>Task Source Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Degree Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MaryLouFulton Teachers College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate College</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Source__c</fullName>
        <label>Task Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU UG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Fair - US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Fair - Int.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Form - College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Form - Degree Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Form - GC Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>